# geometry-of-relativity

./: .env.example  .gitignore  APPENDIX.md  BUILDING.md  CLAUDE.md  FINDINGS.md  FINDINGS_V1.md  PLANNING.md  README.md  STATUS.md  TODO.md  pyproject.toml  requirements.txt
data_gen/: prompts_v1.jsonl
docs/: NEXT_GPU_SESSION.md  NEXT_GPU_SESSION_v10.md  NEXT_GPU_SESSION_v12.md  NEXT_GPU_SESSION_v12_1.md  NEXT_GPU_SESSION_v12_2.md  NEXT_GPU_SESSION_v13.md  NEXT_GPU_SESSION_v6.md  NEXT_GPU_SESSION_v8.md  NEXT_GPU_SESSION_v9.md  PR_feat_v2_prompt_generator.md  PR_v7_cleangrid.md  PR_v8_directsign.md  V12_1_RESULTS_SUMMARY.md  V12_2_RESULTS_SUMMARY.md  V12_RESULTS_SUMMARY.md  V13_RESULTS_SUMMARY.md  paper_outline.md  status_day1.md  v12_sae_feature_notes.md  v4_research_design.md
results/: behavioral_v1_per_mu.csv  behavioral_v1_summary.md  day4_probe_summary.json
scripts/: analyze_behavioral.py  analyze_v1.py  analyze_v10_attention.py  analyze_v10_attention_taxonomy.py  analyze_v10_dimensionality.py  analyze_v10_increment_r2.py  analyze_v10_sae.py  analyze_v11_5_bootstrap_cis.py  analyze_v11_5_joint_ablation.py  analyze_v11_5_multiseed_transfer.py  analyze_v11_5_p3c_fold_aware.py  analyze_v11_5_p3d_widened.py  analyze_v11_5_perm_null_taxonomy.py  analyze_v11_5_sae_token_freq.py  analyze_v11_5_shared_z.py  analyze_v11_cross_pair_transfer.py  analyze_v11_head_taxonomy_and_ablate.py  analyze_v11_increment_r2.py  analyze_v11_pca.py  analyze_v11_sae.py  analyze_v11_z_vs_lexical.py  analyze_v12_cpu.py  analyze_v12_sae_lexical_audit.py  analyze_v9_behavioral_bootstrap.py  (+42 more)
(+622 files in other folders)
