[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mech-interp-relativity"
version = "0.0.1"
description = "Fisher-geometric study of gradable adjectives in LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "torch>=2.2",
    "transformers>=4.45",
    "accelerate>=0.33",
    "safetensors>=0.4",
    "anthropic>=0.39",
    "httpx[socks]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "black>=24.0",
]
gpu = [
    "torch>=2.2",
    "transformers>=4.45",
    "accelerate>=0.33",
    "safetensors>=0.4",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]
